@@ -1,3 +1,7 @@
+2010-03-26 Starboy Qi <starboy.qi@gmail.com>
+
+    * Improve functionality for setting login icon and start-here icon.
+
 2010-03-26 MA Yue <velly.empire@gmail.com>
 
     * Show license for every software
